의상 관련 폴더 번역

--- a/ERB/게임_내_이벤트발생/강제발생이벤트/FORCE_悪堕ちキャラの淫謀.ERB
+++ b/ERB/게임_내_이벤트발생/강제발생이벤트/FORCE_悪堕ちキャラの淫謀.ERB
@@ -1199,7 +1199,7 @@ ELSEIF SELECT < SELECT_N:1
 		ELSEIF RAND:3 == 0
 			PRINT スカートに覗く健康的な
 		ELSEIF RAND:2 == 0
-			PRINT ニーソックスに包まれた
+			PRINT ニー삭스に包まれた
 		ELSE
 			PRINT まだまだ肉付きが少なく幼い
 		ENDIF
