--- a/ERB/게임_내_이벤트발생/이벤트에서_파생되는_특수전투/2 女子高救出.ERB
+++ b/ERB/게임_내_이벤트발생/이벤트에서_파생되는_특수전투/2 女子高救出.ERB
@@ -120,7 +120,7 @@ ELSEIF LOCAL == 3
 	PRINT 地味な見た目の教員らしき女性が
 	LOCALS = 女性
 ELSEIF LOCAL == 2
-	PRINT 체육복とニーソックス姿の少女が
+	PRINT 체육복とニー삭스姿の少女が
 	LOCALS = 少女
 ELSEIF LOCAL == 1
 	PRINT 風紀委員の腕章を付けた制服の少女が
