--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_ナンパ.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_ナンパ.ERB
@@ -1937,7 +1937,7 @@ IF RAND:4 != 0
 			PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%と%ARGS%は、服を大きくはだけた半裸で絡み合っていた。
 			PRINTFORML 服を脱がしながら愛撫していたが途中で我慢がきかなくなったらしい。
 		ELSEIF RAND:2 == 0		
-			PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%下着とソックスは履いたまま性交に及んでいた。
+			PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%下着と삭스は履いたまま性交に及んでいた。
 			PRINTFORML 衣服はその辺に脱ぎ捨てられている。
 		ELSE
 			PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%と%ARGS%の衣服はきちんと折り畳まれ、
@@ -2357,7 +2357,7 @@ IF RAND:4 != 0
 			PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%と%ARGS%は、服を大きくはだけた半裸で絡み合っていた。
 			PRINTFORML 服を脱がしながら愛撫していたが途中で我慢がきかなくなったらしい。
 		ELSEIF RAND:2 == 0		
-			PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%下着とソックスは履いたまま性交に及んでいた。
+			PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%下着と삭스は履いたまま性交に及んでいた。
 			PRINTFORML 衣服はその辺に脱ぎ捨てられている。
 		ELSE
 			PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%と%ARGS%の衣服はきちんと折り畳まれ、
