--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_ファッション.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_ファッション.ERB
@@ -94,7 +94,7 @@ IF TALENT:음란 > 0
 	ELSEIF RAND:4 == 0
 		PRINTFORML タイトスカート。
 	ELSEIF RAND:3 == 0
-		PRINTFORML お尻まで隠れる大きなパーカー。
+		PRINTFORML お尻まで隠れる大きな파카。
 	ELSEIF RAND:2 == 0
 		PRINTFORML フレアミニスカート。
 	ELSE
@@ -106,7 +106,7 @@ IF TALENT:음란 > 0
 	ELSEIF RAND:2 == 0
 		PRINTFORM 派手な色のネイルを
 	ELSE
-		PRINTFORM 派手な色のサイハイソックスを
+		PRINTFORM 派手な色のサイハイ삭스を
 	ENDIF
 	PRINTFORM 身に付けた姿は
 	IF RAND:4 == 0
@@ -231,7 +231,7 @@ ELSEIF (ISFEMALE() && TALENT:변신시TS > 0 && CFLAG:1 > 0) || TALENT:성별변
 		ELSEIF RAND:4 == 0
 			PRINTFORM 花柄
 		ELSEIF RAND:3 == 0
-			PRINTFORM リボン
+			PRINTFORM 리본
 		ELSEIF RAND:2 == 0
 			PRINTFORM ストライプ
 		ELSE
@@ -269,7 +269,7 @@ ELSEIF (ISFEMALE() && TALENT:변신시TS > 0 && CFLAG:1 > 0) || TALENT:성별변
 	ELSEIF RAND:4 == 0
 		PRINTFORM ブルゾンに
 	ELSEIF RAND:3 == 0
-		PRINTFORM パーカーに
+		PRINTFORM 파카に
 	ELSEIF RAND:2 == 0
 		PRINTFORM スウェットに
 	ELSE
@@ -375,7 +375,7 @@ ELSE
 		ELSEIF RAND:4 == 0
 			PRINTFORM 花柄
 		ELSEIF RAND:3 == 0
-			PRINTFORM リボン
+			PRINTFORM 리본
 		ELSEIF RAND:2 == 0
 			PRINTFORM ストライプ
 		ELSE
