--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_学校に行く.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_学校に行く.ERB
@@ -34,12 +34,12 @@ IF ISFEMALE() && TALENT:변신시TS > 0 && CFLAG:1 > 0
 			IF 改造制服 == 1
 				CALL KAIZOU_SEIFUKU
 			ELSE
-				PRINTFORML 制服を露出の多くなるように着こなし、スカート丈も下着が見えそうなマイクロミニ。
-				PRINTFORML 校則違反になる派手な色のソックスを身に付けた姿はいかにも腰の軽そうなギャル風だ。
+				PRINTFORML 制服を露出の多くなるように着こなし、치마 기장も下着が見えそうなマイクロミニ。
+				PRINTFORML 校則違反になる派手な色の삭스を身に付けた姿はいかにも腰の軽そうなギャル風だ。
 			ENDIF
 		ELSE
 			PRINTFORML 露出の多い服装に下着が見えそうなマイクロミニスカート。
-			PRINTFORML とどめに派手な色のサイハイソックスを身に付けた姿はいかにも腰の軽そうなギャル風だ。
+			PRINTFORML とどめに派手な色のサイハイ삭스を身に付けた姿はいかにも腰の軽そうなギャル風だ。
 		ENDIF
 		PRINTW 
 	ELSEIF TALENT:여체수용 > 0
@@ -76,12 +76,12 @@ ELSEIF TALENT:음란 > 0 && TALENT:초심 <= 0 && ISGIRLY()
 		IF 改造制服 == 1
 			CALL KAIZOU_SEIFUKU
 		ELSE
-			PRINTFORML 制服を露出の多くなるように着こなし、スカート丈も下着が見えそうなマイクロミニ。
-			PRINTFORML とどめに派手な色のサイハイソックスを身に付けた姿はいかにも腰の軽そうなギャル風だ。
+			PRINTFORML 制服を露出の多くなるように着こなし、치마 기장も下着が見えそうなマイクロミニ。
+			PRINTFORML とどめに派手な色のサイハイ삭스を身に付けた姿はいかにも腰の軽そうなギャル風だ。
 		ENDIF
 	ELSE
 		PRINTFORML 露出の多い服装に下着が見えそうなマイクロミニスカート。
-		PRINTFORML とどめに派手な色のサイハイソックスを身に付けた姿はいかにも腰の軽そうなギャル風だ。
+		PRINTFORML とどめに派手な色のサイハイ삭스を身に付けた姿はいかにも腰の軽そうなギャル風だ。
 	ENDIF
 ELSEIF TALENT:여체수용 > 0
 	PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%%目的地%に行くことにした。
