--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_改造制服.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_改造制服.ERB
@@ -12,7 +12,7 @@ IF CFLAG:40 == 101
 		PRINT ピンクの
 	;1세라복の3袖
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 3) == 0
-		PRINT 半袖
+		PRINT 반소매
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 3) == 1
 		PRINT 長袖
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 3) == 2
@@ -26,23 +26,23 @@ IF CFLAG:40 == 101
 	PRINTFORML 着こなし、
 	;1세라복の4スカート
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 4) == 0
-		PRINT スカート丈は太ももを見せつけるミニ
+		PRINT 치마 기장は太ももを見せつけるミニ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 4) == 1
 		PRINT ロングスカート
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 4) == 2
-		PRINT スカート丈は下着が見えそうなマイクロミニ
+		PRINT 치마 기장は下着が見えそうなマイクロミニ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 4) == 3
 		PRINT スカートも履かずにブルマのみで
 	PRINTFORML 、
 	SIF TALENT:음란 > 0 && FIGURE_SPLIT(EQUIP:TARGET:1, 5) < 4
 			PRINT 校則違反になる派手な色の
-	;1세라복の5ソックス
+	;1세라복の5삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 5) == 0
-		PRINT ソックス
+		PRINT 삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 5) == 1
-		PRINT ハイソックス
+		PRINT ハイ삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 5) == 2
-		PRINT ルーズソックス
+		PRINT ルーズ삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 5) == 3
 		PRINT ニーハイ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:1, 5) == 4
@@ -59,15 +59,15 @@ ELSEIF CFLAG:40 == 102
 	IF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 4
 		PRINT 裸に
 		SIF FIGURE_SPLIT(EQUIP:TARGET:2, 2) == 0
-			PRINT ネクタイ
+			PRINT 넥타이
 		SIF FIGURE_SPLIT(EQUIP:TARGET:2, 2) == 1
-			PRINT リボン
+			PRINT 리본
 		SIF FIGURE_SPLIT(EQUIP:TARGET:2, 2) == 2
-			PRINT ネクタイとマフラー
+			PRINT 넥타이と머플러
 		SIF FIGURE_SPLIT(EQUIP:TARGET:2, 2) == 3
-			PRINT リボンとマフラー
+			PRINT 리본と머플러
 		SIF FIGURE_SPLIT(EQUIP:TARGET:2, 2) == 4
-			PRINT マフラー
+			PRINT 머플러
 	ENDIF
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 0
 		PRINT 奇をてらわず
@@ -78,26 +78,26 @@ ELSEIF CFLAG:40 == 102
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 3
 		PRINT ヘソと胸元を露出したシャツ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 5
-		PRINT セーター
+		PRINT 스웨터
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 6
-		PRINT ぶかぶかのセーター
+		PRINT ぶかぶかの스웨터
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 7
-		PRINT ポロシャツ
+		PRINT 폴로 셔츠
 	SIF (FIGURE_SPLIT(EQUIP:TARGET:2, 3) != 0 && FIGURE_SPLIT(EQUIP:TARGET:2, 3) != 4) || (FIGURE_SPLIT(EQUIP:TARGET:2, 2) != 5 && FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 4)
 		PRINT と
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 1) == 0
 		PRINT 블레이저
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 1) == 2
-		PRINT パーカー
+		PRINT 파카
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 3) == 4
 		PRINT という倒錯的な嗜好
 	PRINT で着こなし、
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 5) == 0
 		PRINT 
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 5) == 1
-		PRINT スカート丈は太ももを見せつけるミニ
+		PRINT 치마 기장は太ももを見せつけるミニ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 5) == 2
-		PRINT スカート丈は下着が見えそうなマイクロミニ
+		PRINT 치마 기장は下着が見えそうなマイクロミニ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 5) == 3
 		PRINT スマートなズボン
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 5) == 4
@@ -107,11 +107,11 @@ ELSEIF CFLAG:40 == 102
 	SIF TALENT:음란 > 0  && FIGURE_SPLIT(EQUIP:TARGET:2, 6) < 4
 		PRINT 校則違反になる派手な色の
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 6) == 0
-		PRINT ソックス
+		PRINT 삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 6) == 1
-		PRINT ハイソックス
+		PRINT ハイ삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 6) == 2
-		PRINT ルーズソックス
+		PRINT ルーズ삭스
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 6) == 3
 		PRINT ニーハイ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:2, 6) == 4
