--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_運動する.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_運動する.ERB
@@ -11,7 +11,7 @@ IF ISFEMALE() && TALENT:변신시TS > 0 && CFLAG:1 > 0
 		PRINTFORML 女性の姿に変身した%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、身綺麗にして街に繰り出していた。
 		PRINTW 
 		PRINTFORML 露出の多い服装に下着が見えそうなマイクロミニスカート。
-		PRINTFORML とどめに派手な色のサイハイソックスを身に付けた姿はいかにも腰の軽そうなギャル風だ。
+		PRINTFORML とどめに派手な色のサイハイ삭스を身に付けた姿はいかにも腰の軽そうなギャル風だ。
 	ELSEIF TALENT:여체수용 > 0
 		PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%女性化した状態で体を動かしに外出することにした。
 		PRINTW 
@@ -28,7 +28,7 @@ ELSEIF TALENT:음란 > 0 && TALENT:초심 < 1 && ISFEMALE()
 	PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、身綺麗にして街に繰り出していた。
 	PRINTW 
 	PRINTFORML 露出の多い服装に下着が見えそうなマイクロミニスカート。
-	PRINTFORML とどめに派手な色のサイハイソックスを身に付けた姿はいかにも腰の軽そうなギャル風だ。
+	PRINTFORML とどめに派手な色のサイハイ삭스を身に付けた姿はいかにも腰の軽そうなギャル風だ。
 ELSE
 	PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、体を動かしに外出することにした。
 ENDIF
