--- a/ERB/구상/女性汎用口上/KOJO_0_27_乱暴者.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_27_乱暴者.ERB
@@ -108,7 +108,7 @@ PRINTFORML 「……」
 PRINTFORMD  %타겟은% 真剣に
 IF TALENT:악세서리==3
 	IF RAND:2 == 0
-		PRINTFORMDL \@ BASE:TARGET:기력>=7000 ? セーター # マフラー \@を編んでいる……
+		PRINTFORMDL \@ BASE:TARGET:기력>=7000 ? 스웨터 # 머플러 \@を編んでいる……
 	ELSE
 		PRINTFORMDL \@ BASE:TARGET:지성>=400 ? ミルク # ジグソー \@パズルを解いている……
 	ENDIF
