--- a/ERB/구상/女性汎用口上/★KOJO_0_16_真面目/鍛錬_走り込み.ERB
+++ b/ERB/구상/女性汎用口上/★KOJO_0_16_真面目/鍛錬_走り込み.ERB
@@ -331,7 +331,7 @@ ELSEIF ABL:노출벽 >= 3 && RAND:3==0
 	PRINTFORML  人の気配すらない裏路地に足音だけが響いている。
 	PRINTFORML  全身に珠のような汗を浮かべ、表情を引き攣らせた%CALLNAME%が
 	PRINTFORML  周囲の気配を伺いながら息を切らせて駆けてゆく。
-	PRINTFORML  身に着けているものはソックスと靴だけ、少女の肢体を隠すものは何一つ無い。
+	PRINTFORML  身に着けているものは삭스と靴だけ、少女の肢体を隠すものは何一つ無い。
 	;★アイドルがこんな事をしていると知られでもしたら……
 	PRINTFORML  もしもこんな姿を誰かに見られでもしたら……
 	PRINTDATAL
