--- a/ERB/구상/男性汎用口上/KOJO_1_20_ツンデレ.ERB
+++ b/ERB/구상/男性汎用口上/KOJO_1_20_ツンデレ.ERB
@@ -198,7 +198,7 @@ ELSEIF ABL:노출벽 >= 3
 	PRINTFORMDL  人の気配すらない裏路地に足音だけが響いている。
 	PRINTFORMDL  全身に珠のような汗を浮かべ、表情を引き攣らせた%CALLNAME%が
 	PRINTFORMDL  周囲の気配を伺いながら息を切らせて駆けてゆく。
-	PRINTFORMDL  身に着けているものはソックスと靴だけ、\@ISMALE() ? 少年 # 少女 \@の肢体を隠すものは何一つ無い。
+	PRINTFORMDL  身に着けているものは삭스と靴だけ、\@ISMALE() ? 少年 # 少女 \@の肢体を隠すものは何一つ無い。
 	PRINTFORMDL  もしもこんな姿を誰かに見られでもしたら……
 	IF RAND:2 == 0
 		PRINTFORMDL  %타겟은% 熱に冒されたように頬を染め、興奮に身を晒しながら更に足を早めた。
