--- a/ERB/무기및의상/의상관련/CLOTHDATAMisc.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATAMisc.ERB
@@ -1,113 +1,114 @@
 ﻿;----------------------------------------------------------
-;その他装備品
-;※効果発揮処理は全てコード内にべた書きされている模様
+;기타 장비품
+;※효과 발휘 처리는 모두 코드 내에 베껴써져 있는 모양
 
 ;**********************************************************
 ;CLOTH500 스카우터
-;解析度ブースト
+;해석도 부스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_500
-PRINTL  相手の力量を測る装置。
-PRINTL  相手がやたら強くても壊れたりはしない。
-PRINTL 【 効果 】解析度が上がりやすくなる
+PRINTL  상대방의 역량을 재는 장치.
+PRINTL  상대가 무턱대고 강해도 부서지지는 않는다.
+PRINTL 【  효과  】해석도가 오르기 쉬워진다.
 
 ;**********************************************************
 ;CLOTH501 슈퍼 스코프
-;命中ブースト
+;명중 부스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_501
-PRINTL  敵を捕捉しやすくなるスコープ。
-PRINTL  単三電池6本で動く。
-PRINTL 【 効果 】直撃率 상승、カス当たり率の低下
+PRINTL  적을 포착하기 쉬워지는 스코프.
+PRINTL  AA 건전지 6개로 작동한다.
+PRINTL 【  효과  】직격률 상승, 가드 대미지 확률 저하
 
 ;**********************************************************
 ;CLOTH502 가속 장치
-;回避ブースト
+;회피 부스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_502
-PRINTL  体感速度も含めた使用者の速度を上げる。
-PRINTL  使用者に危険が無いよう効果は抑えられている。
-PRINTL 【 効果 】회피율 상승
+PRINTL  체감 속도를 포함한 사용자의 속도를 높인다.
+PRINTL  사용자에게 위험이 없도록 효과는 억제되어 있다.
+PRINTL 【  효과  】회피율 상승
 
 ;**********************************************************
 ;CLOTH503 의욕 스위치
-;SPブースト
+;SP 부스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_503
-PRINTL  EX 게이지が溜まりやすくなる。
-PRINTL  君のはどこにあるんだろう。
-PRINTL 【 効果 】EX 게이지が溜まりやすくなる。
+PRINTL  EX게이지가 쌓이기 쉬워진다.
+;君のはどこにあるんだろう。오리지널을 몰라서 그냥 직역했다
+PRINTL  네 것은 어디에 있을까.
+PRINTL 【  효과  】EX 게이지가 쌓이기 쉬워진다.
 
 ;**********************************************************
 ;CLOTH504 구급 스프레이
-;回復ブースト
+;회복 부스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_504
-PRINTL  素早く応急処置が行えるスプレー。
-PRINTL  いたいですかー？しぬのはこわいですかー？
-PRINTL 【 効果 】「距離を取る」「관찰한다」コマンドでの체력回復効果 상승
+PRINTL  신속하게 응급처치를 할 수 있는 스프레이.
+;いたいですかー？しぬのはこわいですかー？오리지널을 모르겠다
+PRINTL  아프나요오~? 죽는 게 무섭나요오~?
+PRINTL 【  효과  】「거리를 벌린다」「관찰한다」커맨드의 체력 회복 효과 상승
 
 ;**********************************************************
 ;CLOTH505 공중 촬영 드론
-;경험치ブースト
+;경험치 부스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_505
-PRINTL  戦闘の映像を見直して、戦術研究に役立てる。
-PRINTL  ただの市販品なので火力支援はできない。
-PRINTL 【 効果 】보스戦闘後の取得경험치 상승
+PRINTL  전투 영상을 재검토하여, 전술 연구에 유용하게 쓸 수 있다.
+PRINTL  다만, 어디까지나 시판품이기 때문에 화력 지원은 불가능하다.
+PRINTL 【  효과  】보스 전투 후 취득 경험치 상승
 
 ;**********************************************************
-;CLOTH506 TK-ドローン
-;追加공격
+;CLOTH506 TK-드론
+;추가 공격
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_506
-PRINTL  対촉수戦に特化したドローン。
-PRINTL  安心と安全のスカイネット社製。
-PRINTL 【 効果 】ターン終了時に自動で공격
+PRINTL  대촉수전에 특화된 드론.
+PRINTL  안심과 신뢰의 스카이넷사제.
+PRINTL 【  효과  】턴 종료 시에 자동으로 공격
 
 ;**********************************************************
 ;CLOTH507 우주 씰
-;체력リジェネ
+;체력 재생
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_507
-PRINTL  謎のパワーで勝手に傷が癒えていく怪しいシール。
-PRINTL  ふしぎな　ちからが　くわわる　くわわる！！
-PRINTL 【 効果 】戦闘中HP自動回復
+PRINTL  수수께끼의 파워로 저절로 상처가 아물어 가는 수상한 씰 스티커.
+PRINTL  알수없는　에너지가　늘어간다　늘어간다!!
+PRINTL 【  효과  】전투 중 HP 자동 회복
 
 ;**********************************************************
 ;CLOTH508 수호천사
-;状態異常リカバリ
+;상태 이상 회복
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_508
-PRINTL  状態異常になっている時、頑張って治そうとしてくれる。
-PRINTL  しかし気紛れな성격ゆえにあまり働かないことも。
-PRINTL 【 効果 】状態異常の自然治癒確率 상승
+PRINTL  상태 이상에 걸렸을 때, 열심히 고쳐주려 해준다.
+PRINTL  다만 변덕스러운 성격 때문에 제대로 일하지 않을 때도 있다.
+PRINTL 【  효과  】상태 이상의 자연 치유 확률 상승
 
 ;**********************************************************
 ;CLOTH509 심부름꾼
-;방심도自動上昇
+;방심도 자동 상승
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_509
-PRINTL  촉수の注意を分散させて隙を作り出してくれる。
-PRINTL  주인を裏切ったりとかはしない忠義に厚い성격。
-PRINTL 【 効果 】촉수방심도の自動上昇
+PRINTL  촉수의 주의를 분산시켜 빈틈을 만들어 준다.
+PRINTL  주인을 배신하거나 하지 않는 충의에 두터운 성격.
+PRINTL 【  효과  】촉수의 방심도 자동 상승
 
 ;**********************************************************
 ;CLOTH510 입체기동장치
-;공중대시ゲージ上昇
+;공중대시 게이지 상승
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_510
-PRINTL  圧縮ガスでアンカーワイヤーを打ち出す特殊な装備。
-PRINTL  空中での機動力を飛躍的に上昇させる。奴らを駆逐せよ！
-PRINTL 【 効果 】공중대시ゲージ＋１
+PRINTL  압축 가스로 앵커 와이어를 내보내는 특수한 장비.
+PRINTL  공중에서의 기동력을 비약적으로 상승시킨다. 놈들을 구축하라!
+PRINTL 【  효과  】공중대시 게이지 ＋１
 
 ;**********************************************************
 ;CLOTH511 업무용 이어폰
-;전투 지원効果上昇
+;전투 지원 효과 상승
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_511
-PRINTL  オペレータ用の無線式高性能インターカム。
-PRINTL  戦場のあのコを励ましてあげよう！
-PRINTL 【 効果 】전투 지원効果が上昇
-
+PRINTL  오퍼레이터용 고성능 무선 인터컴.
+PRINTL  전쟁터의 그 아이를 격려해 주자!
+PRINTL 【  효과  】전투 지원 효과 상승
 
