--- a/ERB/게임_내_이벤트발생/패배유폐이벤트/PRISON.ERB
+++ b/ERB/게임_내_이벤트발생/패배유폐이벤트/PRISON.ERB
@@ -354,7 +354,7 @@ IF 今回陥落するフラグ == 1 && CONFIG_CHECK_PRISON_F(1) == 1 && (CONFIG_
 			CFLAG:41 = 401
 		;＠중국판　전락装備
 		IF TALENT:전락 == 1
-			;변신능력アリなら淫縛の鎖
+			;변신능력アリなら음박의 사슬
 			IF TALENT:변신능력 == 1
 				CFLAG:41 = 402
 			;변신능력ナシなら촉수の花嫁／noinner
