--- a/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/鍛錬_走り込み.ERB
+++ b/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/鍛錬_走り込み.ERB
@@ -345,10 +345,10 @@ ELSEIF ABL:노출벽 >= 3 && RAND:3==0
 	PRINTFORML  周囲の気配を伺いながら息を切らせて駆けてゆく。
 	IF ISMALE()
 		;#region
-		PRINTFORML  身に着けているものはソックスと靴だけ、少年の肢体を隠すものは何一つ無い。
+		PRINTFORML  身に着けているものは삭스と靴だけ、少年の肢体を隠すものは何一つ無い。
 		;#endregion
 	ELSE 
-		PRINTFORML  身に着けているものはソックスと靴だけ、少女の肢体を隠すものは何一つ無い。
+		PRINTFORML  身に着けているものは삭스と靴だけ、少女の肢体を隠すものは何一つ無い。
 	ENDIF
 	;★アイドルがこんな事をしていると知られでもしたら……
 	PRINTFORML  もしもこんな姿を誰かに見られでもしたら……
