--- a/ERB/무기및의상/의상관련/CLOTHDATA겉옷_변신전용.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA겉옷_변신전용.ERB
@@ -3,10 +3,10 @@
 ;CLOTH200 오리지널 슈트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_200
-PRINTL  比較的健全なデザインの全身を包むタイプのスーツ。
-PRINTL  내구력が高めで挿入への抵抗力が高いが、カスタマイズ性は低い。
-PRINTL 【 補正 】改造スロット：3　속옷에 받는 피해량 경감
-PRINTL 【耐久度】120
+PRINTL  비교적 건전한 디자인으로 고안된 전신을 감싸는 타입의 슈트.
+PRINTL  내구력과 삽입 저항력이 높지만, 커스터마이즈 성능은 비교적 떨어진다.
+PRINTL 【  보정  】개조 슬롯：3　속옷에 받는 피해량 경감
+PRINTL 【 내구력 】120
 @CLOTH_STATUS_200
 	SAVESTR:0'="SLOT3,HP120,DEF50,TAIRYOKU90,KIRYOKU90,"
 
@@ -15,10 +15,10 @@ PRINTL 【耐久度】120
 ;CLOTH201 프리티 스커트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_201
-PRINTL  フリルなどで装飾された魔法少女のスカート衣装。
-PRINTL  魔法の力で守られているため見た目より頑丈で、汎用性も高い。
-PRINTL 【 補正 】改造スロット：4
-PRINTL 【耐久度】100
+PRINTL  프릴 등으로 장식된 마법소녀의 스커트 의상.
+PRINTL  마법의 힘으로 보호받기에 보기보다 튼튼하며, 범용성도 높다.
+PRINTL 【  보정  】개조 슬롯：4
+PRINTL 【 내구력 】100
 @CLOTH_STATUS_201
 	SAVESTR:0'="SLOT4,HP100,TAIRYOKU90,KIRYOKU90,"
 
@@ -27,10 +27,10 @@ PRINTL 【耐久度】100
 ;CLOTH202 배틀 레오타드
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_202
-PRINTL  身動きしやすいレオタードタイプの衣装。
-PRINTL  노출도は高めだがカスタマイズの自由度はピカイチ。
-PRINTL 【 補正 】改造スロット：5　속옷겸용
-PRINTL 【耐久度】80
+PRINTL  움직이기 편한 레오타드 타입 의상.
+PRINTL  노출도가 높지만 그만큼 커스터마이즈의 자유도는 최상급.
+PRINTL 【  보정  】개조 슬롯：5　속옷겸용
+PRINTL 【 내구력 】80
 @CLOTH_STATUS_202
 	SAVESTR:0'="SLOT5,HP80,DEF25,TAIRYOKU90,KIRYOKU90,NOINNER1,"
 
@@ -39,12 +39,12 @@ PRINTL 【耐久度】80
 ;CLOTH299 소프트 바디슈트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_299
-PRINTL  全身を保護する薄いゴム状の隠密用スーツ。
-PRINTL  丈夫な特殊素材で出来ており戦闘中に破壊されることはないが、
-PRINTL  挿入を防ぐことはできない。
-PRINTL 【 補正 】改造スロット：2　피임 효과　속옷겸용
-PRINTL 【耐久度】─
-;피임 효과は個別処理している模様
+PRINTL  전신을 보호하는 얇은 고무 형태의 은밀용 슈트.
+PRINTL  튼튼한 특수 소재로 되어 있어 전투 중에 파괴되지는 않지만,
+PRINTL  삽입을 막을 수는 없으니 주의할 것.
+PRINTL 【  보정  】개조 슬롯：2　피임 효과　속옷겸용
+PRINTL 【 내구력 】─
+;피임 효과는 개별 처리하고 있는 모양
 @CLOTH_STATUS_299
 	SAVESTR:0'="SLOT2,HP-1,DEF25,TAIRYOKU90,KIRYOKU90,NOINNER1,"
 
@@ -53,27 +53,27 @@ PRINTL 【耐久度】─
 ;CLOTH401 사악한 마장
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_401
-PRINTL  瘴気を浴びて形状と色が変質した禍々しいスーツ。
-PRINTL  공격的なフォルムと共に노출도が増してより煽情的になっており、
-PRINTL  股間は薄布で隠されているだけで挿入を防ぐことはできない。
-PRINTL 【 補正 】改造スロット：1　공격1.2倍　기력減少量1.2倍　속옷겸용
-PRINTL 【耐久度】─
+PRINTL  독기를 머금어 모양과 색깔이 변질된 불길한 슈트.
+PRINTL  공격적인 형태와 더불어 노출이 심해져 보다 선정적인 모습이 됐으며,
+PRINTL  고간은 얇은 천으로만 가려져 있을 뿐이기에 삽입을 막을 수 없다.
+PRINTL 【  보정  】개조 슬롯：1　공격 1.2배　기력 감소량1.2배　속옷겸용
+PRINTL 【 내구력 】─
 @CLOTH_STATUS_401
 	SAVESTR:0'="SLOT1,HP-1,DEF25,KOUGEKI120,TAIRYOKU90,KIRYOKU110,NOINNER1,"
 
 
 
 ;********************************************************************************************************************
-;CLOTH402 淫縛の鎖
-;＠중국판　변신능력アリ전락装備
+;CLOTH402 음박의 사슬(淫縛の鎖)
+;＠중국판　변신능력이 있는 캐릭터의 전락 장비
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_402
-PRINTL  細い鎖が何本も連なった、とても衣服とは呼べない代物。
-PRINTL  体の敏感な部分に張り巡らされた棘の鎖が、性器と化した全身を常に발정状態に保つ。
-PRINTL  着用者は最底辺の雌犬よりも卑しく見える。
-PRINTL  挿入を防ぐことは一切できない。
-PRINTL 【 補正 】改造スロット：4　공격1.5倍　기력減少量1.2倍　노출도 높음（대）　속옷겸용
-PRINTL 【耐久度】─
+PRINTL  가느다란 사슬이 몇 개나 이어진, 도저히 의복이라고는 부를 수 없는 물건.
+PRINTL  신체의 민감한 부분에 둘러쳐진 가시의 사슬이 성기로 변한 전신을 항상 발정 상태로 유지시킨다.
+PRINTL  착용자는 최하층 사회의 암캐보다도 천해 보인다.
+PRINTL  당연하게도 삽입은 막을 수 없다.
+PRINTL 【  보정  】개조 슬롯：4　공격 1.5배　기력 감소량1.2배　노출도 높음（대）　속옷겸용
+PRINTL 【 내구력 】─
 @CLOTH_STATUS_402
 	SAVESTR:0'="SLOT4,HP-1,DEF5,KOUGEKI150,TAIRYOKU90,KIRYOKU110,SHYNESS150,NOINNER1,"
 
