--- a/ERB/무기및의상/의상관련/CLOTHDATA겉옷_특수.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA겉옷_특수.ERB
@@ -1,107 +1,109 @@
 ﻿
 
 ;********************************************************************************************************************
-;CLOTH196 촉수の花嫁
-;＠중국판　변신능력無しキャラ用の전락装備
-;　完全に戯けた補正が掛かっているけど、[전락]取得は実質的に周回要素なので通常プレイへの影響はまあ無い…か？
-;　とはいえ明らかに吹っ飛んでるので問題出そうなら後々調整する
+;CLOTH196 촉수의 신부
+;＠중국판　변신능력 없음 캐릭터용 전락장비
+;　완전히 장난친 보정이 걸려 있지만, [전락] 취득은 실질적으로 주회 요소이므로 일반적인 플레이에 미치는 영향은 별로 없…다？
+;　그렇다고는 해도 분명히 날아가고 있기 때문에 문제가 생길 것 같으면 나중에 조정한다
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_196
 ;----------------------------------------------------------
-PRINTL  霧のように薄く透明な花嫁衣裳、表面は촉수のような模様で覆われている……。
-PRINTL 【 補正 】공격5倍　촉수방심도상승량2倍　粘液ダメージ増加（極大）　속옷겸용
-PRINTL 【変身時】공격8倍　민첩30％
-PRINTL 【耐久度】35
+PRINTL  안개처럼 얇고 투명한 신부 의상, 표면은 촉수와 같은 무늬로 덮여 있다……
+PRINTL 【  보정  】공격 5배　촉수 방심도 상승량 2배　점액 피해량 증가（극대）　속옷겸용
+PRINTL 【 변신시 】공격 8배　민첩 30％
+PRINTL 【 내구력 】35
 @CLOTH_STATUS_196
 	SAVESTR:0'="HP35,KOUGEKI500@800,BINSYOU100@30,YUDAN200,LIQUID200,NOINNER1,"
 ;----------------------------------------------------------
-;固有カスタマイズ
+;고유 커스터마이즈
 @CLOTH_CUSTOMIZE_OPTION_DRAW_196(CUSTOM,ID,ARG)
 #DIM REF CUSTOM,0
 #DIM ID,1
 
 SIF CUSTOM:0 == 0
-	PRINT [艶紺]
+	PRINT [염감(紺)]
 SIF CUSTOM:0 == 1
-	PRINT [淫白]
+	PRINT [음백(白)]
 SIF CUSTOM:0 == 2
-	PRINT [媚黒]
+	PRINT [미흑(黒)]
 SIF CUSTOM:0 == 3
-	PRINT [魅紫]
+	PRINT [매자(紫)]
 SIF CUSTOM:0 == 4
-	PRINT [妖紅]
-;本来は臙脂色が指定されている　現代日本では他より知名度が低いので詰める
+	PRINT [요홍(妖紅)]
+;원래는 연지색이 지정되어 있다(원문은 중국어로 胭脂)　현대 일본에서는 다른 나라보다 지명도가 낮아서 막는다
 ;SIF CUSTOM:0 == 5
-;	PRINT [胭脂]
+;	PRINT [연지]
+;원문은 蕩桃
 SIF CUSTOM:0 == 5
-	PRINT [蕩桃]
+	PRINT [탕도(桃)]
 
 SIF CUSTOM:1 == 1
-	PRINT [ボールギャグ]
+	PRINT [볼 개그]
 SIF CUSTOM:1 == 2
-	PRINT [鼻フック]
+	PRINT [코 후크]
 SIF CUSTOM:1 == 3
-	PRINT [目隠し]
+	PRINT [눈가리개]
 SIF CUSTOM:1 == 4
-	PRINT [口枷]
+	PRINT [재갈]
 
 IF TALENT:ARG:유두피어싱 > 0
 	SIF CUSTOM:2 == 1
-		PRINT [乳首チェーン]
+		PRINT [유두 체인]
 	SIF CUSTOM:2 == 2
-		PRINT [リング乳首チェーン]
+		PRINT [링 유두 체인]
 	SIF CUSTOM:2 == 3
-		PRINT [乳房電極]
+		PRINT [유방 전극]
+	;ㅅㅂ 金属乳枷 이걸 어떻게 바꾸나 싶었다
 	SIF CUSTOM:2 == 4
-		PRINT [金属乳枷]
+		PRINT [유방 철착고]
 ELSE
 	SIF CUSTOM:2 == 1
-		PRINT [乳クリップ]
+		PRINT [유방 클립]
 	SIF CUSTOM:2 == 2
-		PRINT [ニップレス]
+		PRINT [니플 패치]
 	SIF CUSTOM:2 == 3
-		PRINT [ニプルバイブ]
+		PRINT [니플 바이브]
 	SIF CUSTOM:2 == 4
-		PRINT [乳枷]
+		PRINT [유방 착고]
 ENDIF
 
 SIF CUSTOM:3 == 0
-	PRINT [透けロングスカート]
+	PRINT [비치는 롱스커트]
 SIF CUSTOM:3 == 1
-	PRINT [ミニスカート]
+	PRINT [미니스커트]
 SIF CUSTOM:3 == 2
-	PRINT [前開きマイクロミニスカート]
+	PRINT [앞트임 마이크로 미니스커트]
 SIF CUSTOM:3 == 3
-	PRINT [プリーツスカート（透明）]
+	PRINT [플리츠 스커트(투명)]
 SIF CUSTOM:3 == 4
-	PRINT [淫猥な貞操帯]
+	PRINT [외설적인 정조대]
 
 SIF CUSTOM:3 != 0 && (CUSTOM:4 == 1 || CUSTOM:4 == 2 || CUSTOM:4 == 3 )
-	PRINT [絶対領域]
+	PRINT [절대영역]
 
 SIF CUSTOM:4 == 0
-	PRINT [素足]
+	PRINT [맨발]
 SIF CUSTOM:4 == 1
-	PRINT [レースストッキング][ハイヒール]
+	PRINT [레이스 스타킹][하이힐]
 SIF CUSTOM:4 == 2
-	PRINT [網サイハイ][ハイヒール]
+	PRINT [망사 사이 하이][하이힐]
 SIF CUSTOM:4 == 3
-	PRINT [ガーターストッキング]
+	PRINT [가터 스타킹]
 SIF CUSTOM:4 == 4
-	PRINT [パンスト]
+	PRINT [팬티 스타킹]
 SIF CUSTOM:4 == 5
-	PRINT [足枷]
+	PRINT [족쇄]
 
 SIF CUSTOM:1 == 4 && CUSTOM:3 == 4 && CUSTOM:4 == 5
-	PRINT [性奴拘束]
+	PRINT [성노예 구속]
 
 PRINTL 
 SIF CFLAG:ARG:1 > 0 && CFLAG:ARG:(900 + ID) == 1
-	PRINTL 　変身時追加：[全頭マスク][애널プラグ]
+	PRINTL 　변신 시 추가：[복면][애널 플러그]
 SIF CFLAG:ARG:1 > 0 && CFLAG:ARG:(900 + ID) == 2
-	PRINTL 　変身時追加：[首枷][手枷鎖][足枷鎖]
+	PRINTL 　변신 시 추가：[칼][사슬 쇠고랑][사슬 족쇄]
 SIF CFLAG:ARG:1 > 0 && CFLAG:ARG:(900 + ID) == 3
-	PRINTL 　変身時追加：[人工淫紋][束縛帯]
+	PRINTL 　변신 시 추가：[인공 음문][속박대]
 
 @CLOTH_CUSTOMIZE_OPTION_196,ARG
 #DIM CUSTOM, 5
@@ -116,52 +118,52 @@ REND
 TRYCALLFORM CLOTH_CUSTOMIZE_OPTION_DRAW_{(CFLAG:ARG:1 == 0 ? 100 # 0)+ID}(CUSTOM,ID,ARG)
 DRAWLINE
 
-CALL CLOTH_CUSTOMIZE_OPTION_COMMON(ID,ARG,"基調色","頭部","胸部","下半身","ソックス","@@")
+CALL CLOTH_CUSTOMIZE_OPTION_COMMON(ID,ARG,"바탕색","머리","흉부","하반신","삭스","@@")
 $INPUT_LOOP
 CALL CLOTH_CUSTOMIZE_OPTION_COMMON(-999)
 
 IF RESULT == 0
 	CLEARLINE 1
 	CALL SHORTLINE
-	PRINTL 基調色を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"紺","白","검정","보라","紅","분홍","@@")
+	PRINTL 바탕색을 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"감색","하양","검정","보라","홍색","분홍","@@")
 	CUSTOM:0 = RESULT
 ELSEIF RESULT == 10
 	CLEARLINE 1
 	CALL SHORTLINE
-	PRINTL 頭部の「装飾」を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:1,"なし","ボールギャグ","鼻フック","目隠し","口枷@重1","@@")
+	PRINTL 머리 부분의「장식」을 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:1,"없음","볼 개그","코 후크","눈가리개","재갈@중1","@@")
 	CUSTOM:1 = RESULT
 ELSEIF RESULT == 20
 	IF TALENT:ARG:유두피어싱 > 0
 		CLEARLINE 1
 		CALL SHORTLINE
-		PRINTL 가슴部の「装飾」を選択してください
-		CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:2,"なし","チェーン@重2油3","リングチェーン@重3油2","電極@油3","金属乳枷@重6","@@")
+		PRINTL 가슴 부분의「장식」을 선택해 주십시오.
+		CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:2,"없음","체인@중2방3","링 체인@중3방2","전극@방3","가슴 철착고@중6","@@")
 	ELSE
 		CLEARLINE 1
 		CALL SHORTLINE
-		PRINTL 가슴部の「装飾」を選択してください
-		CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:2,"なし","乳クリップ@重1油2","ニップレス@油4","ニプルバイブ@重1油2","乳枷@重5","@@")
+		PRINTL 가슴 부분의「장식」을 선택해 주십시오.
+		CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:2,"없음","유방 클립@중1방2","니플 패치@방4","니플 바이브@중1방2","유방 착고@중5","@@")
 	ENDIF
 	CUSTOM:2 = RESULT
 ELSEIF RESULT == 30
 	CLEARLINE 1
 	CALL SHORTLINE
-	PRINTL 下半身の着衣を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:3,"ロングスカート","ミニスカート@軽2晒3","マイクロミニスカート@軽1晒2","「プリーツスカート」@軽4晒5","貞操帯@重4護4","@@")
+	PRINTL 하반신의 착의를 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:3,"롱스커트","미니스커트@경2백3","마이크로 미니스커트@경1백2","「플리츠 스커트」@경4백5","정조대@중4보4","@@")
 	CUSTOM:3 = RESULT
 ELSEIF RESULT == 40
 	CLEARLINE 1
 	CALL SHORTLINE
-	PRINTL ソックスを選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:4,"素足","レースストッキング","網サイハイ","ガーターストッキング","パンスト@重2","足枷@油5晒4","@@")
+	PRINTL 삭스를 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:4,"맨발","레이스 스타킹","망사 사이 하이","가터 스타킹","팬티 스타킹@중2","족쇄@방5백4","@@")
 	CUSTOM:4 = RESULT
 ELSEIF RESULT == 50 && CFLAG:ARG:1 > 0
 	CLEARLINE 1
 	CALL SHORTLINE
-	PRINTL 追加装備を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CFLAG:ARG:(900 + ID),"追加装備なし","官能制御@（全頭マスク＋애널プラグ）","行為制御@（足枷鎖＋手枷鎖+首枷）","발정制御@（人工淫紋＋束縛帯）","@@")
+	PRINTL 추가 장비를 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CFLAG:ARG:(900 + ID),"추가 장비 없음","관능 제어@（복면＋애널 플러그）","행위 제어@（사슬 족쇄＋사슬 쇠고랑+칼）","발정 제어@（인공 음문＋속박대）","@@")
 	CFLAG:ARG:(900 + ID) = RESULT
 ELSEIF RESULT == 90
 	CALL CLOTH_CUSTOMIZE_OPTION_INITIALIZE(ARG,ID,CUSTOM)
@@ -197,14 +199,14 @@ SIF CUSTOM:3 == 3
 SIF CUSTOM:4 == 4
 	LOCAL -= 1
 
-;補正効果
-;軽装
+;보정 효과
+;경장
 SIF LOCAL < 0
 	EQUIP:ARG:ID -= LOCAL * POWER(10, 9)
-;重装
+;중장
 SIF LOCAL > 0
 	EQUIP:ARG:ID += LOCAL * POWER(10, 10)
-;속옷 보호アップ
+;속옷 보호 UP
 SIF CUSTOM:4 == 4
 	EQUIP:ARG:ID += 1 * POWER(10, 12)
 RETURN -1
@@ -213,9 +215,9 @@ RETURN -1
 ;CLOTH197 오퍼레이터 베스트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_197
-PRINTL  전투 지원オペレーターの制服。
-PRINTL 【 補正 】지성1.3倍 非戦闘員専用
-PRINTL 【耐久度】90
+PRINTL  전투 지원 오퍼레이터의 제복.
+PRINTL 【  보정  】지성 1.3배 비전투원 전용
+PRINTL 【 내구력 】90
 @CLOTH_STATUS_197
 	SAVESTR:0'="SLOT-1,HP90,CHISEI130,KOUGEKI50,"
 
@@ -224,28 +226,28 @@ PRINTL 【耐久度】90
 ;CLOTH198 목욕 타월
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_198
-PRINTL  入浴時に使われるごく普通のタオルを身体に巻いただけ。当然ながら방어力は皆無。
-PRINTL 【 補正 】촉수の방심도上昇2.5倍　노출도 높음（대）
-PRINTL 【耐久度】45
+PRINTL  목욕할 때 쓰는 아주 평범한 타월. 방어도는 전무하지만, 직접 풀지 않는 이상 절대로 벗겨지지 않는다는 전설이……
+PRINTL 【  보정  】촉수의 방심도 상승량 2.5배　노출도 높음（대）
+PRINTL 【 내구력 】45
 @CLOTH_STATUS_198
 	SAVESTR:0'="SLOT-1,HP45,DEF70,YUDAN250,SHYNESS150,"
 
 
 ;********************************************************************************************************************
-;CLOTH199 촉수服
+;CLOTH199 촉수 슈트
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_199
-PRINTL  촉수 생물の細胞を利用した生体鎧。着用者を大きくパワーアップさせるが…
-;PRINTL  なお、このアイテムは通常時と変身時で分けて装備することができない。
-PRINTL 【 補正 】全能力1.25倍、성내성を常に消費　속옷겸용
-PRINTL 【耐久度】─
-;성내성消費や暴走時処理はベタ書き
+PRINTL  촉수 생물의 세포를 이용한 생체 갑옷. 착용자를 크게 파워업 시키지만……
+;PRINTL  또한, 이 아이템은 평상시와 변신 시로 나누어 장비할 수 없다.
+PRINTL 【  보정  】모든 능력 1.25배, 성내성을 항상 소비　속옷겸용
+PRINTL 【 내구력 】─
+;성내성 소비나 폭주 시 처리는 베껴쓰기
 @CLOTH_STATUS_199
 SAVESTR:0'="HP-1,KOUGEKI!,BOUGYO!,BINSYOU!,CHISEI125,NOINNER1,"
 ;SAVESTR:0'="SLOT-1,HP-1,KOUGEKI!,BOUGYO!,BINSYOU!,CHISEI125,NOINNER1,"
 
 ;----------------------------------------------------------
-;特殊分岐
+;특수 분기
 @CLOTH_HOSEI_KOUGEKI_199
 LOCAL = 125 + FIGURE_SPLIT(EQUIP:(CFLAG:1==0 ? 99 # 199), 2) * 25
 SIF FIGURE_SPLIT(EQUIP:(CFLAG:1==0 ? 99 # 199), 3) == 1
@@ -270,22 +272,22 @@ SIF FIGURE_SPLIT(EQUIP:(CFLAG:1==0 ? 99 # 199), 4) == 4
 	TIMES LOCAL, 1.3
 RETURN LOCAL
 ;----------------------------------------------------------
-;固有カスタマイズ
+;고유 커스터마이즈
 @CLOTH_CUSTOMIZE_OPTION_DRAW_199(CUSTOM,ID,ARG)
 #DIM REF CUSTOM,0
 #DIM ID,1
 SIF CUSTOM:0 == 1
-	PRINT [ボディスーツ]
+	PRINT [보디 슈트]
 SIF CUSTOM:0 == 2
-	PRINT [ワンピース]
+	PRINT [원피스]
 SIF CUSTOM:0 == 3
-	PRINT [レオタード]
+	PRINT [레오타드]
 SIF CUSTOM:0 == 4
 	PRINT [메이드복]
 SIF CUSTOM:0 == 5
 	PRINT [무당복]
 
-PRINTFORM [強化Lv{CUSTOM:1}]
+PRINTFORM [강화Lv{CUSTOM:1}]
 
 SIF CUSTOM:2 == 1
 	PRINT [공격 강화]
@@ -295,17 +297,17 @@ SIF CUSTOM:2 == 3
 	PRINT [민첩 강화]
 
 SIF CUSTOM:3 == 1
-	PRINT [성내성消費軽減Lv1]
+	PRINT [성내성 소비 경감 Lv1]
 SIF CUSTOM:3 == 2
-	PRINT [성내성消費軽減Lv2]
+	PRINT [성내성 소비 경감 Lv2]
 SIF CUSTOM:3 == 3
-	PRINT [성내성消費半減]
+	PRINT [성내성 소비 반감]
 SIF CUSTOM:3 == 4
-	PRINT [常時暴走化]
+	PRINT [상시 폭주화]
 
 PRINTL 
 SIF CFLAG:ARG:1 > 0 && CFLAG:ARG:(900 + ID) == 1
-	PRINTL 　変身時追加：[豪華な装飾][軽装甲]
+	PRINTL 　변신 시 추가：[호화로운 장식][경장갑]
 
 @CLOTH_CUSTOMIZE_OPTION_199,ARG
 #DIM CUSTOM, 7
@@ -320,32 +322,32 @@ REND
 TRYCALLFORM CLOTH_CUSTOMIZE_OPTION_DRAW_{(CFLAG:ARG:1 == 0 ? 100 # 0)+ID}(CUSTOM,ID,ARG)
 DRAWLINE
 
-CALL CLOTH_CUSTOMIZE_OPTION_COMMON(ID,ARG,"形状"+(FLAG:54 == 0 ? "!!研究레벨が足りません" # ""),"能力強化"+(FLAG:54 == 0 ? "!!研究레벨が足りません" # ""),"個別能力強化"+(FLAG:54 == 0 ? "!!研究레벨が足りません" # ""),"성내성消費軽減"+(FLAG:54 == 0 ? "!!研究레벨が足りません" # ""),"@@")
+CALL CLOTH_CUSTOMIZE_OPTION_COMMON(ID,ARG,"형태"+(FLAG:54 == 0 ? "!!연구 레벨이 부족합니다." # ""),"능력 강화"+(FLAG:54 == 0 ? "!!연구 레벨이 부족합니다." # ""),"개별 능력 강화"+(FLAG:54 == 0 ? "!!연구 레벨이 부족합니다." # ""),"성내성 소비 경감 "+(FLAG:54 == 0 ? "!!연구 레벨이 부족합니다." # ""),"@@")
 $INPUT_LOOP
 CALL CLOTH_CUSTOMIZE_OPTION_COMMON(-999)
 
 IF RESULT == 0
-	PRINTL 形状を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"デフォルト","ボディスーツ","ワンピース","レオタード","메이드복","무당복","@@")
+	PRINTL 형태를 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"디폴트","보디 슈트","원피스","레오타드","메이드복","무당복","@@")
 	CUSTOM:0 = RESULT
 ELSEIF RESULT == 10
-	PRINTL 能力強化Lvを選択してください
-	PRINTL Lvが高いほど공격、방어、민첩補正とデメリットが強化されます
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:1,"Lv0(デフォルト)","Lv1@"+(FLAG:54 < 1 ? "!!研究레벨が足りません" # ""),"Lv2@"+(FLAG:54 < 2 ? "!!研究레벨が足りません" # ""),"Lv3@"+(FLAG:54 < 3 ? "!!研究레벨が足りません" # ""),"Lv4@"+(FLAG:54 < 4 ? "!!研究레벨が足りません" # ""),"Lv5@"+(FLAG:54 < 5 ? "!!研究레벨が足りません" # ""),"@@")
+	PRINTL 능력 강화Lv을 선택해 주십시오.
+	PRINTL Lv이 높을 수록 공격, 방어, 민첩 보정이 강화되지만 디메리트도 더 늘어납니다.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:1,"Lv0(디폴트)","Lv1@"+(FLAG:54 < 1 ? "!!연구 레벨이 부족합니다." # ""),"Lv2@"+(FLAG:54 < 2 ? "!!연구 레벨이 부족합니다." # ""),"Lv3@"+(FLAG:54 < 3 ? "!!연구 레벨이 부족합니다." # ""),"Lv4@"+(FLAG:54 < 4 ? "!!연구 레벨이 부족합니다." # ""),"Lv5@"+(FLAG:54 < 5 ? "!!연구 레벨이 부족합니다." # ""),"@@")
 	CUSTOM:1 = RESULT
 ELSEIF RESULT == 20
-	PRINTL 強化する項目を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:2,"デフォルト","공격補正強化＆성내성消費微増@"+(FLAG:54 < 3 ? "!!研究레벨が足りません" # ""),"방어補正強化＆성내성消費微増@"+(FLAG:54 < 3 ? "!!研究레벨が足りません" # ""),"민첩補正強化＆성내성消費微増@"+(FLAG:54 < 3 ? "!!研究레벨が足りません" # ""),"@@")
+	PRINTL 강화할 항목을 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:2,"디폴트","공격 보정 강화＆성내성 소비 미량 증가@"+(FLAG:54 < 3 ? "!!연구 레벨이 부족합니다." # ""),"방어 보정 강화＆성내성 소비 미량 증가@"+(FLAG:54 < 3 ? "!!연구 레벨이 부족합니다." # ""),"민첩 보정 강화＆성내성 소비 미량 증가@"+(FLAG:54 < 3 ? "!!연구 레벨이 부족합니다." # ""),"@@")
 	CUSTOM:2 = RESULT
 ELSEIF RESULT == 30
-	PRINTL 項目を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:3,"デフォルト","성내성消費軽減＆暴走強化Lv1@"+(FLAG:54 < 2 ? "!!研究레벨が足りません" # ""),"성내성消費軽減＆暴走強化Lv2@"+(FLAG:54 < 4 ? "!!研究레벨が足りません" # ""),"성내성消費半減＆低確率で暴走@"+(FLAG:54 < 3 ? "!!研究레벨が足りません" # ""),"常時暴走化＆能力補正強化@"+(FLAG:54 < 5 ? "!!研究레벨が足りません" # ""),"@@")
+	PRINTL 항목을 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:3,"디폴트","성내성 소비 경감 ＆폭주 강화Lv1@"+(FLAG:54 < 2 ? "!!연구 레벨이 부족합니다." # ""),"성내성 소비 경감 ＆폭주 강화Lv2@"+(FLAG:54 < 4 ? "!!연구 레벨이 부족합니다." # ""),"성내성 소비 반감＆낮은 확률로 폭주@"+(FLAG:54 < 3 ? "!!연구 레벨이 부족합니다." # ""),"상시 폭주화＆능력 보정 강화@"+(FLAG:54 < 5 ? "!!연구 레벨이 부족합니다." # ""),"@@")
 	CUSTOM:3 = RESULT
 ELSEIF RESULT == 40 && CFLAG:ARG:1 > 0
 	CLEARLINE 1
 	CALL SHORTLINE
-	PRINTL 追加装備を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CFLAG:ARG:(900 + ID),"追加装備なし","オーソドックス@（豪華な装飾＋軽装甲）","@@")
+	PRINTL 추가 장비를 선택해 주십시오.
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CFLAG:ARG:(900 + ID),"추가 장비 없음","정통파@（호화로운 장식＋경장갑）","@@")
 	CFLAG:ARG:(900 + ID) = RESULT
 
 ELSEIF RESULT == 90
