--- a/ERB/무기및의상/의상관련/CLOTHDATA커스텀.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA커스텀.ERB
@@ -1,11 +1,11 @@
 ﻿;----------------------------------------------------------
-;カスタムパーツ
+;커스터마이즈 파츠
 
 ;---------------------------------------------------------------------------
-;以下に並ぶカスタムパーツ補正の一括計算処理
-;(ARGが装備中のパーツを一括で判定、ARGSパラメータについて加算)
-;※カスタムパーツは装備スロット形式なのでこのような処理になっている模様
-;※耐久無し衣装のHP判定はここで考慮せず호출元の側で切っている
+;이하에 나열된 커스터마이즈 파츠 보정 일괄 계산 처리
+;(ARG가 장비 중인 파츠를 일괄로 판정, ARGS 파라미터에 대해 가산)
+;※커스터마이즈 파츠는 장비 슬롯 형식이므로 이와 같은 처리가 되어 있는 모양
+;※내구 없는 의상의 HP판정은 여기서 고려하지 않고 처음 호출 측에서 끊고 있다
 @CLOTH_CUSTOMIZE_COMMONPARTS_CAL, ARG, ARGS
 FOR LOCAL:1, 600, 700
 	IF EQUIP:(LOCAL:1)
@@ -23,7 +23,7 @@ RETURN ARG
 ;CLOTH600 과잉 노출
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_600
-PRINTL 【 効果 】민첩+10％　방어-10％
+PRINTL 【  보정  】민첩 +10％　방어 -10％
 @CLOTH_CUSTOM_HOSEI_BOUGYO_600
 LOCAL = -10
 RETURN LOCAL
@@ -35,7 +35,7 @@ RETURN LOCAL
 ;CLOTH601 뷰티 리본
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_601
-PRINTL 【 効果 】耐久+10
+PRINTL 【  보정  】내구 +10
 @CLOTH_CUSTOM_HOSEI_HP_601
 LOCAL = 10
 RETURN LOCAL
@@ -44,7 +44,7 @@ RETURN LOCAL
 ;CLOTH602 파워 쥬얼
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_602
-PRINTL 【 効果 】전투 중 체력 감소량 0.8倍
+PRINTL 【  보정  】전투 중 체력 감소량 0.8배
 @CLOTH_CUSTOM_HOSEI_TAIRYOKU_602
 LOCAL = -20
 RETURN LOCAL
@@ -53,7 +53,7 @@ RETURN LOCAL
 ;CLOTH603 호사스러운 장식
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_603
-PRINTL 【 効果 】전투 중 기력 감소량 0.8倍
+PRINTL 【  보정  】전투 중 기력 감소량 0.8배
 @CLOTH_CUSTOM_HOSEI_KIRYOKU_603
 LOCAL = -20
 RETURN LOCAL
@@ -62,7 +62,7 @@ RETURN LOCAL
 ;CLOTH604 점액 내성
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_604
-PRINTL 【 効果 】점액 피해량 경감（중）
+PRINTL 【  보정  】점액 피해량 경감（중）
 @CLOTH_CUSTOM_HOSEI_LIQUID_604
 LOCAL = -20
 RETURN LOCAL
@@ -71,7 +71,7 @@ RETURN LOCAL
 ;CLOTH605 독기 내성
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_605
-PRINTL 【 効果 】사기(邪気) 피해량 경감（중）
+PRINTL 【  보정  】사기(邪気) 피해량 경감（중）
 @CLOTH_CUSTOM_HOSEI_WAVE_605
 LOCAL = -20
 RETURN LOCAL
@@ -80,7 +80,7 @@ RETURN LOCAL
 ;CLOTH606 공격 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_606
-PRINTL 【 効果 】공격 +5％
+PRINTL 【  보정  】공격 +5％
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_606
 LOCAL = 5
 RETURN LOCAL
@@ -89,7 +89,7 @@ RETURN LOCAL
 ;CLOTH607 방어 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_607
-PRINTL 【 効果 】방어 +5％
+PRINTL 【  보정  】방어 +5％
 @CLOTH_CUSTOM_HOSEI_BOUGYO_607
 LOCAL = 5
 RETURN LOCAL
@@ -98,7 +98,7 @@ RETURN LOCAL
 ;CLOTH608 민첩 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_608
-PRINTL 【 効果 】민첩 +5％
+PRINTL 【  보정  】민첩 +5％
 @CLOTH_CUSTOM_HOSEI_BINSYOU_608
 LOCAL = 5
 RETURN LOCAL
@@ -107,7 +107,7 @@ RETURN LOCAL
 ;CLOTH609 지성 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_609
-PRINTL 【 効果 】지성 +5％
+PRINTL 【  보정  】지성 +5％
 @CLOTH_CUSTOM_HOSEI_CHISEI_609
 LOCAL = 5
 RETURN LOCAL
@@ -116,7 +116,7 @@ RETURN LOCAL
 ;CLOTH610 모든 능력 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_610
-PRINTL 【 効果 】공격 +5％　방어 +5％　민첩 +5％　耐久-20
+PRINTL 【  보정  】공격 +5％　방어 +5％　민첩 +5％　내구 -20
 @CLOTH_CUSTOM_HOSEI_HP_610
 LOCAL = -20
 RETURN LOCAL
@@ -134,7 +134,7 @@ RETURN LOCAL
 ;CLOTH611 치명타 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_611
-PRINTL 【 効果 】치명타 보정 +5％
+PRINTL 【  보정  】치명타 보정 +5％
 @CLOTH_CUSTOM_HOSEI_CRITICAL_611
 LOCAL = 5
 RETURN LOCAL
@@ -143,7 +143,7 @@ RETURN LOCAL
 ;CLOTH612 에어리얼 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_612
-PRINTL 【 効果 】공중 성능 강화
+PRINTL 【  보정  】공중 성능 강화
 @CLOTH_CUSTOM_HOSEI_AIRPLUS_612
 LOCAL = 1
 RETURN LOCAL
@@ -152,7 +152,7 @@ RETURN LOCAL
 ;CLOTH613 EX증폭 강화
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_613
-PRINTL 【 効果 】EX 게이지 증폭
+PRINTL 【  보정  】EX 게이지 증폭
 @CLOTH_CUSTOM_HOSEI_EXBOOST_613
 LOCAL = 30
 RETURN LOCAL
@@ -161,7 +161,7 @@ RETURN LOCAL
 ;CLOTH614 가속 부스터
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_614
-PRINTL 【 効果 】공격 +5％　민첩 +5％　방어-10％
+PRINTL 【  보정  】공격 +5％　민첩 +5％　방어 -10％
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_614
 LOCAL = 5
 RETURN LOCAL
@@ -176,7 +176,7 @@ RETURN LOCAL
 ;CLOTH615 아이 바이저
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_615
-PRINTL 【 効果 】지성+10％
+PRINTL 【  보정  】지성 +10％
 @CLOTH_CUSTOM_HOSEI_CHISEI_615
 LOCAL = 10
 RETURN LOCAL
@@ -185,7 +185,7 @@ RETURN LOCAL
 ;CLOTH616 색적 시스템
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_616
-PRINTL 【 効果 】지성 +10％　直撃率+10％　방어-10％
+PRINTL 【  보정  】지성 +10％　직격률 +10％　방어 -10％
 @CLOTH_CUSTOM_HOSEI_BOUGYO_616
 LOCAL = -10
 RETURN LOCAL
@@ -200,7 +200,7 @@ RETURN LOCAL
 ;CLOTH617 견부 아머
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_617
-PRINTL 【 効果 】耐久+10
+PRINTL 【  보정  】내구 +10
 @CLOTH_CUSTOM_HOSEI_HP_617
 LOCAL = 10
 RETURN LOCAL
@@ -209,7 +209,7 @@ RETURN LOCAL
 ;CLOTH618 복슬복슬한 갈기
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_618
-PRINTL 【 効果 】공격 +5％　방어 +5％　민첩-10％
+PRINTL 【  보정  】공격 +5％　방어 +5％　민첩 -10％
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_618
 LOCAL = 5
 RETURN LOCAL
@@ -224,7 +224,7 @@ RETURN LOCAL
 ;CLOTH607 초커
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_619
-PRINTL 【 効果 】지성 +5％
+PRINTL 【  보정  】지성 +5％
 @CLOTH_CUSTOM_HOSEI_CHISEI_619
 LOCAL = 5
 RETURN LOCAL
@@ -233,7 +233,7 @@ RETURN LOCAL
 ;CLOTH660 외투:머플러
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_660
-PRINTL 【 効果 】공격 +5％
+PRINTL 【  보정  】공격 +5％
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_660
 LOCAL = 5
 RETURN LOCAL
@@ -242,7 +242,7 @@ RETURN LOCAL
 ;CLOTH661 외투:망토
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_661
-PRINTL 【 効果 】방어 +5％
+PRINTL 【  보정  】방어 +5％
 @CLOTH_CUSTOM_HOSEI_BOUGYO_661
 LOCAL = 5
 RETURN LOCAL
@@ -251,7 +251,7 @@ RETURN LOCAL
 ;CLOTH662 외투:윙 파츠
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_662
-PRINTL 【 効果 】민첩 +5％
+PRINTL 【  보정  】민첩 +5％
 @CLOTH_CUSTOM_HOSEI_BINSYOU_662
 LOCAL = 5
 RETURN LOCAL
@@ -260,7 +260,7 @@ RETURN LOCAL
 ;CLOTH663 외투:하프 자켓
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_663
-PRINTL 【 効果 】耐久+10
+PRINTL 【  보정  】내구 +10
 @CLOTH_CUSTOM_HOSEI_HP_663
 LOCAL = 10
 RETURN LOCAL
@@ -269,7 +269,7 @@ RETURN LOCAL
 ;CLOTH664 羽織：天女のはごろも
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_664
-PRINTL 【 効果 】방어 +5％　민첩 +5％　공격-10％　耐久+10
+PRINTL 【  보정  】방어 +5％　민첩 +5％　공격 -10％　내구 +10
 @CLOTH_CUSTOM_HOSEI_HP_664
 LOCAL = 10
 RETURN LOCAL
@@ -287,7 +287,7 @@ RETURN LOCAL
 ;CLOTH670 흉부:경장갑
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_670
-PRINTL 【 効果 】耐久+20
+PRINTL 【  보정  】내구 +20
 @CLOTH_CUSTOM_HOSEI_HP_670
 LOCAL = 20
 RETURN LOCAL
@@ -296,7 +296,7 @@ RETURN LOCAL
 ;CLOTH671 흉부:중장갑
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_671
-PRINTL 【 効果 】耐久+40　방어+10％　민첩-10％
+PRINTL 【  보정  】내구 +40　방어 +10％　민첩 -10％
 @CLOTH_CUSTOM_HOSEI_HP_671
 LOCAL = 40
 RETURN LOCAL
@@ -311,7 +311,7 @@ RETURN LOCAL
 ;CLOTH672 흉부:가슴을 강조한 디자인
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_672
-PRINTL 【 効果 】공격+10％　耐久-10　빈유不可
+PRINTL 【  보정  】공격 +10％　내구 -10　빈유 불가
 @CLOTH_CUSTOM_HOSEI_HP_672
 LOCAL = -10
 RETURN LOCAL
@@ -323,7 +323,7 @@ RETURN LOCAL
 ;CLOTH673 흉부:슬림한 디자인
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_673
-PRINTL 【 効果 】민첩+10％　耐久-10　거유不可
+PRINTL 【  보정  】민첩 +10％　내구 -10　거유 불가
 @CLOTH_CUSTOM_HOSEI_HP_673
 LOCAL = -10
 RETURN LOCAL
@@ -335,7 +335,7 @@ RETURN LOCAL
 ;CLOTH680 팔:마수꾼의 발톱
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_680
-PRINTL 【 効果 】공격+10％　방어-10％
+PRINTL 【  보정  】공격 +10％　방어 -10％
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_680
 LOCAL = 10
 RETURN LOCAL
@@ -347,7 +347,7 @@ RETURN LOCAL
 ;CLOTH681 팔:대형 무장 너클
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_681
-PRINTL 【 効果 】공격+10％　민첩-10％
+PRINTL 【  보정  】공격 +10％　민첩 -10％
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_681
 LOCAL = 10
 RETURN LOCAL
@@ -359,7 +359,7 @@ RETURN LOCAL
 ;CLOTH682 팔:건틀렛 아머
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_682
-PRINTL 【 効果 】방어+10％　민첩-10％
+PRINTL 【  보정  】방어 +10％　민첩 -10％
 @CLOTH_CUSTOM_HOSEI_BOUGYO_682
 LOCAL = 10
 RETURN LOCAL
@@ -371,7 +371,7 @@ RETURN LOCAL
 ;CLOTH683 팔:롱글러브
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_683
-PRINTL 【 効果 】방어 +5％
+PRINTL 【  보정  】방어 +5％
 @CLOTH_CUSTOM_HOSEI_BOUGYO_683
 LOCAL = 5
 RETURN LOCAL
@@ -380,7 +380,7 @@ RETURN LOCAL
 ;CLOTH690 다리:절대영역
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_690
-PRINTL 【 効果 】공격 +5％　スーツ系不可
+PRINTL 【  보정  】공격 +5％　슈트계 불가
 @CLOTH_CUSTOM_HOSEI_KOUGEKI_690
 LOCAL = 5
 RETURN LOCAL
@@ -389,7 +389,7 @@ RETURN LOCAL
 ;CLOTH691 다리:붕대
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_691
-PRINTL 【 効果 】방어 +5％　スーツ系不可
+PRINTL 【  보정  】방어 +5％　슈트계 불가
 @CLOTH_CUSTOM_HOSEI_BOUGYO_691
 LOCAL = 5
 RETURN LOCAL
@@ -398,7 +398,7 @@ RETURN LOCAL
 ;CLOTH692 다리:윙부츠
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_692
-PRINTL 【 効果 】민첩 +5％　スーツ系不可
+PRINTL 【  보정  】민첩 +5％　슈트계 불가
 @CLOTH_CUSTOM_HOSEI_BINSYOU_692
 LOCAL = 5
 RETURN LOCAL
@@ -407,7 +407,7 @@ RETURN LOCAL
 ;CLOTH693 다리:팬티 스타킹
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_693
-PRINTL 【 効果 】지성 +5％　スーツ系不可
+PRINTL 【  보정  】지성 +5％　슈트계 불가
 @CLOTH_CUSTOM_HOSEI_CHISEI_693
 LOCAL = 5
 RETURN LOCAL
@@ -416,7 +416,7 @@ RETURN LOCAL
 ;CLOTH694 다리:각부 아머
 ;---------------------------------------------
 @CLOTH_DESCRIPTION_694
-PRINTL 【 効果 】耐久+10　スーツ系不可
+PRINTL 【  보정  】내구 +10　슈트계 불가
 @CLOTH_CUSTOM_HOSEI_HP_694
 LOCAL = 10
 RETURN LOCAL
