--- a/ERB/범용함수/PRINT_RGBTEXT（색채명,문자열）.ERB
+++ b/ERB/범용함수/PRINT_RGBTEXT（색채명,문자열）.ERB
@@ -29,7 +29,7 @@ SELECTCASE ARGS:0
 		SETCOLOR 0x00FF00
 	CASE "초록" , "그린"  , "Green" , "GREEN" , "Ｇｒｅｅｎ" , "ＧＲＥＥＮ"
 		SETCOLOR 0x008000
-	CASE "수색" , "아쿠아" , "Aqua" , "AQUA" , "Ａｑｕａ" , "ＡＱＵＡ"
+	CASE "하늘색" , "아쿠아" , "Aqua" , "AQUA" , "Ａｑｕａ" , "ＡＱＵＡ"
 		SETCOLOR 0x00FFFF
 	CASE "오리깃빛" , "오리빛" ,"물오리색" , "Teal" , "TEAL" , "Ｔｅａｌ" , "ＴＥＡＬ"
 		SETCOLOR 0x008080
